# valuescope

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
apps/api/: .env.example  main.py
apps/web/: muysil-map.html  valuescope-map.html  wonju-map.html
apps/web/data/: muysil.js  valuescope-deals.js
docs/: formulas.md  glossary.md  index.html  muysil.html  valueup.html  wonju.html
examples/: sample_deal.json
scripts/: build_muysil_map.py  build_wonju_map.py  combine_wonju.py  export_dashboard_data.py  export_map_deals.py
src/valuescope/: __init__.py  cli.py  io_json.py  version.py
src/valuescope/calculators/: __init__.py  amortization.py  cashflow.py  irr.py  metrics.py  net_yield.py  operations.py  valueadd.py
src/valuescope/connectors/: __init__.py  building_ledgers.py  building_registry.py  molit_excel.py  rtms_api.py
src/valuescope/domain/: __init__.py  loan.py  money.py  operating.py  rent_roll.py  sources_uses.py
src/valuescope/engine/: __init__.py  analyze.py  decision.py  scenario.py  solver.py  underwrite.py
tests/: conftest.py
tests/golden/: cases.py  test_golden_cases.py
tests/unit/: test_amortization.py  test_building_ledgers.py  test_building_registry.py  test_cashflow.py  test_decision.py  test_io_json.py  test_irr.py  test_metrics.py  test_molit_excel.py  test_money.py  test_net_yield.py  test_operating.py  test_operations.py  test_rent_roll.py  test_rtms_api.py  test_scenario.py  test_solver.py  test_valueadd.py
